2009-02-02  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/GrayPaintScale.java
    (alpha): New field,
    (GrayPaintScale(double, double)): Delegate to new constructor,
    (GrayPaintScale(double, double, int)): New constructor,
    (getAlpha): New method,
    (getPaint): Use alpha setting for returned paint,
    (equals): Check new field,
    (hashCode): New method,
    * tests/org/jfree/chart/renderer/junit/GrayPaintScaleTests.java
    (testEquals): Check new field.

2009-01-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/xy/XYErrorRenderer.java
    (errorStroke): New field,
    (XYErrorRenderer): Initialise new field,
    (getErrorStroke): New method,
    (setErrorStroke): Likewise,
    (drawItem): Updated to use new errorStroke or else item outline stroke,
    (equals): Check new field,
    (readObject): Handle new field,
    (writeObject): Likewise,
    * tests/org/jfree/chart/renderer/xy/junit/XYErrorRendererTests.java
    (testEquals): Added check for errorStroke field,
    (testCloning2): New test,
    (testSerialization2): Likewise.

2009-01-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/DataUtilities.java
    (clone(double[][]): New method,
    * tests/org/jfree/data/junit/DataUtilitiesTests.java
    (testClone): New method.

2009-01-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/AbstractRenderer.java
    (equals): Fix shape test,
    * tests/org/jfree/chart/renderer/junit/AbstractRendererTests.java
    (testEquals): Modified to cover Shape.equals() bug.

2009-01-28  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/data/DataUtilities.java
    (equal(double[][], double[][])): New method,
    * tests/org/jfree/data/junit/DataUtilitiesTests.java
    (testEqual): New method,
    (suite): Likewise,
    (main): Likewise.
